@@ -1,5 +1,16 @@
 2007-03-18  David Hyatt  <hyatt@apple.com>
 
+        Use fillRect instead of drawLine, since drawLine has some odd behavior (it's only used for borders).
+
+        Reviewed by aroben
+
+        * platform/graphics/IntRect.h:
+        * rendering/RenderFrameSet.cpp:
+        (WebCore::RenderFrameSet::paintColumnBorder):
+        (WebCore::RenderFrameSet::paintRowBorder):
+
+2007-03-18  David Hyatt  <hyatt@apple.com>
+
         Change the frameborder color to be light gray for framesets.
 
         Reviewed by aroben
